# twinTrim

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTION.md  CONTRIBUTION_GUIDELINES.md  DOCUMENTION  Documentation  Features.md  How-It-Works.md  LICENSE  License.md  README.md  check.yaml  files.db  final_test_consumesApisGit.git  final_test_consumesApisGit.yaml  index.html  mkdocs.yml  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  enhancement_request.md  feature_request.md  test_request.md  workflow_request.md
.github/workflows/: auto_assign_issues.yml  ci.yml  contributors.yml  python-package.yml  test.yml
Contributing/: index.html
Usage/: index.html
docs/: Contributing.md  Features.md  How-It-Works.md  License.md  Team.md  Usage.md  index.md
search/: search_index.json
site/Features/: index.html
site/How-It-Works/: index.html
site/License/: index.html
tests/: allFileMetadata.py  allFileMetadata_compare_and_replace.py  fileFilter.py  fileFilter_test.py  fileMetadata_test.py  test_addOrUpdateNormalFile.py  test_allFileMetadata.py  test_fileFilter.py  test_fileFliter_setMinFileSize.py  test_fileMetadata.py  test_filefilter.py  test_flagController.py  test_setMaxFileSize.py  test_utils.py
tests/fileFilter/: test_setFileType.py  test_setMinFileSize.py
trim/: pyvenv.cfg
trim/Scripts/: activate  activate.bat
twinTrim/: dataStructures.py  db.py  flagController.py  flags.py  fuzzy.py  main.py  test_utils.py  utils.py
twinTrim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
twinTrim/dataStructures/: allFileMetadata.py  fileFilter.py  fileMetadata.py  test_allFileMetadata.py  test_fileMetadata.py
