[tool.poetry]
name = "twinTrim"
version = "0.1.0"
description = "A CLI tool to find and delete duplicate files in a directory."
authors = ["Kota-Karthik <kotakarthik2307@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"  # For creating CLI commands
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
twinTrim = "twinTrim.main:cli"
